# meshtastic-zephyr

./: Doxyfile  README.rst  west.yml
.github/workflows/: build.yml  docs.yml
include/zephyr/meshtastic/: meshtastic.h  telemetry.h
samples/meshtastic/: CMakeLists.txt  Kconfig  README.rst  overlay-smp.conf  sample.yaml
samples/meshtastic/boards/: twatch_s3_esp32s3_procpu.overlay
samples/meshtastic/src/: main.c  sample_app.c  sample_app.h  sample_gui.c  sample_gui.h  sample_gui_model.c  sample_gui_model.h  sample_gui_renderer.c  sample_gui_renderer.h  sample_gui_stub.c
src/: CMakeLists.txt  Kconfig  Kconfig.ble  Kconfig.core  Kconfig.serial  Kconfig.smp  README.rst  meshtastic.c  meshtastic_ble.c  meshtastic_channels.c  meshtastic_core.h  meshtastic_environment.c  meshtastic_gnss.c  meshtastic_metrics.c  meshtastic_modules.c  meshtastic_nodeinfo.c  meshtastic_outbound.h  meshtastic_packet.c  meshtastic_phoneapi.c  meshtastic_phoneapi.h  meshtastic_phoneapi_config.c  meshtastic_radio.c  meshtastic_router.c  meshtastic_router.h  meshtastic_routing.c  meshtastic_serial.c  meshtastic_shell.c  meshtastic_smp.c  meshtastic_stats.c  meshtastic_stats.h
tests/protocol/: prj.conf
tests/protocol/src/: main.c
zephyr/: module.yml
